syntax = "proto3";

package Common.Proto.Player;
import "Base/Status.proto";
import "Player/NetCharacter.proto";

message EnterGameRequest {
    int32 character_id = 1;
}

message EnterGameResponse {
    Base.Status status = 1;
    string message = 2;
    NetCharacter character = 4;
}